--- a/templates/ajax/get_post.html
+++ b/templates/ajax/get_post.html
@@ -26,9 +26,9 @@
                             </ul>
                         </div>
                     </div>
-                    <ins><a href="time-line.html" title="">{{ post.user.username }}</a> Post Album
+                    <ins><a href="time-line.html" title="">{{ post.user.username }}</a>
                     </ins>
-                    <span><i class="fa fa-globe"></i> published: September,15 2020 19:PM </span>
+                    <span><i class="fa fa-globe"></i> published: {{ post.created_at }} </span>
                 </div>
                 <div class="post-meta">
                     <p>
@@ -123,3 +123,5 @@
         </div>
     </div>
 {% endfor %}
+
+
