--- a/templates/social/index.html
+++ b/templates/social/index.html
@@ -454,6 +454,11 @@
                     var $commentsList = $form.closest('.coment-area').find('.we-comet');
                     // Thêm comment mới vào trước phần tử cuối cùng (form)
                     $commentsList.children('.post-comment').before(response.comment_html);
+                    
+                    // Cập nhật số đếm comment
+                    var $commentCount = $form.closest('.central-meta').find('.comment ins');
+                    var currentCount = parseInt($commentCount.text(), 10); // Lấy số đếm hiện tại
+                    $commentCount.text(currentCount + 1); // Tăng số đếm lên 1
                     $form.find('textarea[name="content"]').val(''); 
                 }
             },
