--- a/templates/social/index.html
+++ b/templates/social/index.html
@@ -183,153 +183,20 @@
                 <!-- Modal body -->
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-lg-8">
+                        <div class="col">
                             <div class="pop-image">
                                 <div class="pop-item">
-                                    <figure><img src="{% static 'images/resources/blog-detail.jpg' %}" alt=""></figure>
+                                    <img style="width: 100%" src="{% static 'images/resources/blog.jpg' %}"
+                                         alt="Image 1">
+                                </div>
+                                <div class="pop-item">
+                                    <img style="width: 100%" src="{% static 'images/resources/blog2.jpg' %}"
+                                         alt="Image 2">
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="user">
-                                <figure><img src="{% static 'images/resources/user1.jpg' %}" alt=""></figure>
-                                <div class="user-information">
-                                    <h4><a href="#" title="">Danile Walker</a></h4>
-                                    <span>2 hours ago</span>
-                                </div>
-                                <a href="#" title="Follow" data-ripple="">Follow</a>
-                            </div>
-                            <div class="we-video-info">
-                                <ul>
-                                    <li>
-                                        <div title="Like/Dislike" class="likes heart">❤ <span>2K</span></div>
-                                    </li>
-                                    <li>
-									<span title="Comments" class="comment">
-										<i class="fa fa-commenting"></i>
-										<ins>52</ins>
-									</span>
-                                    </li>
-
-                                    <li>
-									<span>
-										<a title="Share" href="#" class="">
-											<i class="fa fa-share-alt"></i>
-										</a>
-										<ins>20</ins>
-									</span>
-                                    </li>
-                                </ul>
-                                <div class="users-thumb-list">
-                                    <a href="#" title="" data-toggle="tooltip" data-original-title="Anderw">
-                                        <img src="images/resources/userlist-1.jpg" alt="">
-                                    </a>
-                                    <a href="#" title="" data-toggle="tooltip" data-original-title="frank">
-                                        <img src="images/resources/userlist-2.jpg" alt="">
-                                    </a>
-                                    <a href="#" title="" data-toggle="tooltip" data-original-title="Sara">
-                                        <img src="images/resources/userlist-3.jpg" alt="">
-                                    </a>
-                                    <a href="#" title="" data-toggle="tooltip" data-original-title="Amy">
-                                        <img src="images/resources/userlist-4.jpg" alt="">
-                                    </a>
-                                    <span><strong>You</strong>, <b>Sarah</b> and <a title="" href="#">24+ more</a> liked</span>
-                                </div>
-                            </div>
-                            <div style="display: block;" class="coment-area">
-                                <ul class="we-comet">
-                                    <li>
-                                        <div class="comet-avatar">
-                                            <img alt="" src="images/resources/nearly3.jpg">
-                                        </div>
-                                        <div class="we-comment">
-                                            <h5><a title="" href="time-line.html">Jason borne</a></h5>
-                                            <p>we are working for the dance and sing songs. this video is very awesome
-                                                for the youngster. please vote this video and like our channel</p>
-                                            <div class="inline-itms">
-                                                <span>1 year ago</span>
-                                                <a title="Reply" href="#" class="we-reply"><i
-                                                        class="fa fa-reply"></i></a>
-                                                <a title="" href="#"><i class="fa fa-heart"></i><span>20</span></a>
-                                            </div>
-                                        </div>
-
-                                    </li>
-                                    <li>
-                                        <div class="comet-avatar">
-                                            <img alt="" src="images/resources/comet-4.jpg">
-                                        </div>
-                                        <div class="we-comment">
-                                            <h5><a title="" href="time-line.html">Sophia</a></h5>
-                                            <p>we are working for the dance and sing songs. this video is very awesome
-                                                for the youngster.
-                                                <i class="em em-smiley"></i>
-                                            </p>
-                                            <div class="inline-itms">
-                                                <span>1 year ago</span>
-                                                <a title="Reply" href="#" class="we-reply"><i
-                                                        class="fa fa-reply"></i></a>
-                                                <a title="" href="#"><i class="fa fa-heart"></i><span>20</span></a>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="comet-avatar">
-                                            <img alt="" src="images/resources/comet-4.jpg">
-                                        </div>
-                                        <div class="we-comment">
-                                            <h5><a title="" href="time-line.html">Sophia</a></h5>
-                                            <p>we are working for the dance and sing songs. this video is very awesome
-                                                for the youngster.
-                                                <i class="em em-smiley"></i>
-                                            </p>
-                                            <div class="inline-itms">
-                                                <span>1 year ago</span>
-                                                <a title="Reply" href="#" class="we-reply"><i
-                                                        class="fa fa-reply"></i></a>
-                                                <a title="" href="#"><i class="fa fa-heart"></i><span>20</span></a>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <a class="showmore underline" title="" href="#">more comments+</a>
-                                    </li>
-                                    <li class="post-comment">
-                                        <div class="comet-avatar">
-                                            <img alt="" src="images/resources/nearly1.jpg">
-                                        </div>
-                                        <div class="post-comt-box">
-                                            <form method="post">
-                                                <textarea placeholder="Post your comment"></textarea>
-                                                <div class="add-smiles">
-                                                    <div class="uploadimage">
-                                                        <i class="fa fa-image"></i>
-                                                        <label class="fileContainer">
-                                                            <input type="file">
-                                                        </label>
-                                                    </div>
-                                                    <span title="add icon" class="em em-expressionless"></span>
-                                                    <div class="smiles-bunch">
-                                                        <i class="em em---1"></i>
-                                                        <i class="em em-smiley"></i>
-                                                        <i class="em em-anguished"></i>
-                                                        <i class="em em-laughing"></i>
-                                                        <i class="em em-angry"></i>
-                                                        <i class="em em-astonished"></i>
-                                                        <i class="em em-blush"></i>
-                                                        <i class="em em-disappointed"></i>
-                                                        <i class="em em-worried"></i>
-                                                        <i class="em em-kissing_heart"></i>
-                                                        <i class="em em-rage"></i>
-                                                        <i class="em em-stuck_out_tongue"></i>
-                                                    </div>
-                                                </div>
-
-                                                <button type="submit"></button>
-                                            </form>
-                                        </div>
-                                    </li>
-                                </ul>
+                            <div class="button-container">
+                                <button class="prev-btn">Previous</button>
+                                <button class="next-btn">Next</button>
                             </div>
                         </div>
                     </div>
@@ -341,7 +208,58 @@
 {% endblock %}
 
 {% block scripts %}
+    <script>
+        $(document).ready(function () {
+            // Sử dụng delegation để gán sự kiện cho các phần tử mới
+            $(document).on('click', '.post-image', function (event) {
+                event.preventDefault();
 
+                // Lấy danh sách ảnh của bài viết từ thuộc tính data-images
+                const postImages = JSON.parse($(this).attr('data-images'));
+                console.log(postImages)
+                $('.pop-image').empty()
+                postImages.forEach(function (imageURL, index) {
+                    let item = `
+                    <div class="pop-item">
+                        <img style="width: 100%" src="${imageURL}"
+                             alt="Image 1">
+                    </div>
+                    `
+                    $('.pop-image').append(item)
+                })
+                const popItems = document.querySelectorAll('.pop-item');
+                const prevBtn = document.querySelector('.prev-btn');
+                const nextBtn = document.querySelector('.next-btn');
+                let currentItem = 0;
+
+                function showItem(index) {
+                    popItems.forEach((item, i) => {
+                        if (i === index) {
+                            item.style.display = 'block';
+                        } else {
+                            item.style.display = 'none';
+                        }
+                    });
+                }
+
+                nextBtn.addEventListener('click', () => {
+                    currentItem = (currentItem + 1) % popItems.length;
+                    showItem(currentItem);
+                });
+
+                prevBtn.addEventListener('click', () => {
+                    currentItem = (currentItem - 1 + popItems.length) % popItems.length;
+                    showItem(currentItem);
+                });
+            });
+        });
+
+
+    </script>
+    <script>
+
+
+    </script>
 
     <!-- Load post thời điểm ban đầu-->
     <script>
@@ -350,7 +268,7 @@
                 url: '{% url 'post_list' %}?page=1',
                 type: 'GET',
                 success: function (response) {
-              
+
                     $('#loadMore').append(response.html)
 
                 },
@@ -431,43 +349,43 @@
     <!-- Xử lý add comment-->
     <script>
         $(document).ready(function () {
-    // Xử lý khi form được submit bằng event delegation
-    $(document).on('submit', '.comment-form', function (event) {
-        event.preventDefault();  // Ngăn form submit theo cách truyền thống
+            // Xử lý khi form được submit bằng event delegation
+            $(document).on('submit', '.comment-form', function (event) {
+                event.preventDefault();  // Ngăn form submit theo cách truyền thống
 
-        var $form = $(this);
-        var postId = $form.find('input[name="post_id"]').val();
-        var content = $form.find('textarea[name="content"]').val();
+                var $form = $(this);
+                var postId = $form.find('input[name="post_id"]').val();
+                var content = $form.find('textarea[name="content"]').val();
 
-        $.ajax({
-            url: '{% url 'add_comment' %}',  // URL của view xử lý comment
-            method: 'POST',
-            data: {
-                'post_id': postId,
-                'content': content,
-                'csrfmiddlewaretoken': $form.find('input[name="csrfmiddlewaretoken"]').val(),
-            },
-            success: function (response) {
-                // Chèn comment mới vào danh sách comment
-                if (response.comment_html) {
-                    // Tìm đúng <ul> để thêm comment mới
-                    var $commentsList = $form.closest('.coment-area').find('.we-comet');
-                    // Thêm comment mới vào trước phần tử cuối cùng (form)
-                    $commentsList.children('.post-comment').before(response.comment_html);
-                    
-                    // Cập nhật số đếm comment
-                    var $commentCount = $form.closest('.central-meta').find('.comment ins');
-                    var currentCount = parseInt($commentCount.text(), 10); // Lấy số đếm hiện tại
-                    $commentCount.text(currentCount + 1); // Tăng số đếm lên 1
-                    $form.find('textarea[name="content"]').val(''); 
-                }
-            },
-            error: function (xhr, status, error) {
-                console.error('Failed to post comment:', error);
-            }
+                $.ajax({
+                    url: '{% url 'add_comment' %}',  // URL của view xử lý comment
+                    method: 'POST',
+                    data: {
+                        'post_id': postId,
+                        'content': content,
+                        'csrfmiddlewaretoken': $form.find('input[name="csrfmiddlewaretoken"]').val(),
+                    },
+                    success: function (response) {
+                        // Chèn comment mới vào danh sách comment
+                        if (response.comment_html) {
+                            // Tìm đúng <ul> để thêm comment mới
+                            var $commentsList = $form.closest('.coment-area').find('.we-comet');
+                            // Thêm comment mới vào trước phần tử cuối cùng (form)
+                            $commentsList.children('.post-comment').before(response.comment_html);
+
+                            // Cập nhật số đếm comment
+                            var $commentCount = $form.closest('.central-meta').find('.comment ins');
+                            var currentCount = parseInt($commentCount.text(), 10); // Lấy số đếm hiện tại
+                            $commentCount.text(currentCount + 1); // Tăng số đếm lên 1
+                            $form.find('textarea[name="content"]').val('');
+                        }
+                    },
+                    error: function (xhr, status, error) {
+                        console.error('Failed to post comment:', error);
+                    }
+                });
+            });
         });
-    });
-});
 
     </script>
 
