--- a/templates/partial/user-profile.html
+++ b/templates/partial/user-profile.html
@@ -32,7 +32,7 @@
                     </div>
 
                     <div class="author-content">
-                        <a class="h4 author-name" href="{% url 'user-profile' %}">{{ profile.user.username }}</a>
+                        <a class="h4 author-name" href="{% url 'user-profile' %}">{{ user.first_name }} {{ user.last_name }}</a>
                         <div class="country">Việt Nam, Hồ Chí Minh</div>
                     </div>
                 </div>
