--- a/templates/ajax/add_comment.html
+++ b/templates/ajax/add_comment.html
@@ -3,7 +3,7 @@
         <img src="{{ comment.user.profile.avatar.url }}" alt="">
     </div>
     <div class="we-comment">
-        <h5><a href="time-line.html" title="">{{ comment.user.username }}</a></h5>
+        <h5><a href="{% url 'user_profile' comment.user.id %}" title="">{{ comment.user.username }}</a></h5>
         <p>{{ comment.content }}</p>
         <div class="inline-itms">
             <span>{{ comment.created_at }}</span>
