--- a/templates/social/timeline.html
+++ b/templates/social/timeline.html
@@ -1316,7 +1316,7 @@
 													<a class="" href="timeline-photos.html">Photos</a>
 												</li>
 												<li>
-													<a class="" href="timeline-videos.html">Videos</a>
+													<a class="" href="{% url '' %}">Notifications</a>
 												</li>
 												<li>
 													<div class="more">
@@ -3204,7 +3204,7 @@
 		</div>
 	</div><!-- report popup -->
 	
-	
+
 	<script src="js/main.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8c55_YHLvDHGACkQscgbGLtLRdxBDCfI"></script>
 	<script src="js/locationpicker.jquery.js"></script>
